--- a/VoiceCode/Base.lproj/Recorder.storyboard
+++ b/VoiceCode/Base.lproj/Recorder.storyboard
@@ -23,7 +23,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FQ6-nw-s60">
-                                <rect key="frame" x="16" y="49" width="343" height="86"/>
+                                <rect key="frame" x="16" y="126" width="343" height="86"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ggd-x6-9Be">
                                         <rect key="frame" x="279" y="12" width="58" height="58"/>
@@ -80,7 +80,7 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Voice recording" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QWu-7r-v3A">
-                                <rect key="frame" x="16" y="28" width="119" height="21"/>
+                                <rect key="frame" x="16" y="105" width="119" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="1Uq-TW-LrE"/>
                                     <constraint firstAttribute="width" constant="119" id="6uE-d2-TE2"/>
@@ -89,8 +89,18 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="File name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nUG-6F-QVF">
+                                <rect key="frame" x="16" y="46" width="119" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="NqC-vg-sFy"/>
+                                    <constraint firstAttribute="width" constant="119" id="VqJ-Sb-AVo"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b9g-5P-pKL">
-                                <rect key="frame" x="16" y="163" width="343" height="91"/>
+                                <rect key="frame" x="16" y="240" width="343" height="91"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="OO3-aO-xVU">
                                         <rect key="frame" x="8" y="5" width="61" height="72"/>
@@ -127,8 +137,8 @@
                                             </label>
                                         </subviews>
                                     </stackView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Crp-gh-m7o">
-                                        <rect key="frame" x="72" y="5" width="263" height="12"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Crp-gh-m7o">
+                                        <rect key="frame" x="72" y="5" width="263" height="0.0"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="263" id="bCd-ba-eWR"/>
                                         </constraints>
@@ -136,26 +146,26 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xLz-4A-Gl5">
-                                        <rect key="frame" x="72" y="20" width="263" height="12"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xLz-4A-Gl5">
+                                        <rect key="frame" x="72" y="8" width="263" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y66-BI-U0t">
-                                        <rect key="frame" x="72" y="35" width="263" height="12"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y66-BI-U0t">
+                                        <rect key="frame" x="72" y="41" width="263" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iee-1w-GVQ">
-                                        <rect key="frame" x="72" y="50" width="263" height="12"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iee-1w-GVQ">
+                                        <rect key="frame" x="72" y="44" width="263" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mbl-O8-BN3">
-                                        <rect key="frame" x="72" y="65" width="263" height="12"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mbl-O8-BN3">
+                                        <rect key="frame" x="72" y="77" width="263" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -183,7 +193,7 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recording info" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QJP-Rg-OwD">
-                                <rect key="frame" x="16" y="143" width="119" height="21"/>
+                                <rect key="frame" x="16" y="220" width="119" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="119" id="6gc-FZ-gKu"/>
                                     <constraint firstAttribute="height" constant="21" id="WOx-N1-gDT"/>
@@ -192,30 +202,60 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d8M-eg-CcH">
+                                <rect key="frame" x="16" y="105" width="343" height="107"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Iyi-iu-F39">
+                                <rect key="frame" x="16" y="67" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="continue"/>
+                            </textField>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nhN-oW-IRN">
+                                <rect key="frame" x="16" y="220" width="343" height="111"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="FQ6-nw-s60" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="29" id="Bgr-8w-wkA"/>
+                            <constraint firstItem="d8M-eg-CcH" firstAttribute="bottom" secondItem="b9g-5P-pKL" secondAttribute="bottom" constant="-119" id="25L-ml-2ME"/>
+                            <constraint firstItem="nhN-oW-IRN" firstAttribute="trailing" secondItem="b9g-5P-pKL" secondAttribute="trailing" id="5nd-L2-KMq"/>
+                            <constraint firstItem="FQ6-nw-s60" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="106" id="Bgr-8w-wkA"/>
+                            <constraint firstItem="d8M-eg-CcH" firstAttribute="trailing" secondItem="b9g-5P-pKL" secondAttribute="trailing" id="CFS-To-ZN8"/>
+                            <constraint firstItem="nUG-6F-QVF" firstAttribute="leading" secondItem="QWu-7r-v3A" secondAttribute="leading" id="DkP-TQ-TCK"/>
+                            <constraint firstItem="d8M-eg-CcH" firstAttribute="leading" secondItem="QJP-Rg-OwD" secondAttribute="leading" id="EzY-rc-gDx"/>
                             <constraint firstItem="QWu-7r-v3A" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="IqO-Hu-xcs"/>
                             <constraint firstItem="QJP-Rg-OwD" firstAttribute="leading" secondItem="b9g-5P-pKL" secondAttribute="leading" id="UoT-Np-Xo2"/>
                             <constraint firstItem="b9g-5P-pKL" firstAttribute="trailing" secondItem="FQ6-nw-s60" secondAttribute="trailing" id="WVH-Vh-Byp"/>
                             <constraint firstItem="FQ6-nw-s60" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="gzp-cc-wVT"/>
+                            <constraint firstItem="Iyi-iu-F39" firstAttribute="leading" secondItem="nUG-6F-QVF" secondAttribute="leading" id="hgj-4M-nai"/>
+                            <constraint firstItem="Iyi-iu-F39" firstAttribute="trailing" secondItem="FQ6-nw-s60" secondAttribute="trailing" id="kAX-r5-02T"/>
+                            <constraint firstItem="nhN-oW-IRN" firstAttribute="bottom" secondItem="b9g-5P-pKL" secondAttribute="bottom" id="lce-z5-17s"/>
+                            <constraint firstItem="d8M-eg-CcH" firstAttribute="top" secondItem="QWu-7r-v3A" secondAttribute="top" id="mh2-9m-xfC"/>
                             <constraint firstItem="b9g-5P-pKL" firstAttribute="leading" secondItem="FQ6-nw-s60" secondAttribute="leading" id="oNF-Nq-CoH"/>
-                            <constraint firstItem="QWu-7r-v3A" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="qrR-4y-5mR"/>
+                            <constraint firstItem="QWu-7r-v3A" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="85" id="qrR-4y-5mR"/>
+                            <constraint firstItem="QWu-7r-v3A" firstAttribute="top" secondItem="Iyi-iu-F39" secondAttribute="bottom" constant="8" symbolic="YES" id="rog-hZ-vJ1"/>
+                            <constraint firstItem="nUG-6F-QVF" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="26" id="rvu-sf-6qG"/>
                             <constraint firstItem="QJP-Rg-OwD" firstAttribute="top" secondItem="FQ6-nw-s60" secondAttribute="bottom" constant="8" symbolic="YES" id="slE-Jf-rTA"/>
+                            <constraint firstItem="nhN-oW-IRN" firstAttribute="leading" secondItem="QJP-Rg-OwD" secondAttribute="leading" id="utY-y9-iU1"/>
+                            <constraint firstItem="nhN-oW-IRN" firstAttribute="top" secondItem="QJP-Rg-OwD" secondAttribute="top" id="xGJ-Lj-q1Y"/>
                             <constraint firstItem="b9g-5P-pKL" firstAttribute="top" secondItem="FQ6-nw-s60" secondAttribute="bottom" constant="28" id="ya0-S2-sn0"/>
                             <constraint firstItem="QWu-7r-v3A" firstAttribute="leading" secondItem="FQ6-nw-s60" secondAttribute="leading" id="zUo-wv-xuS"/>
                         </constraints>
                         <connections>
                             <outlet property="channelsLabel" destination="Mbl-O8-BN3" id="DSU-EI-u1F"/>
                             <outlet property="durationLabel" destination="xLz-4A-Gl5" id="knT-TF-AMj"/>
+                            <outlet property="fileNameTextField" destination="Iyi-iu-F39" id="Y4D-Vr-Ha1"/>
                             <outlet property="formatLabel" destination="Y66-BI-U0t" id="b3E-Ud-Tbt"/>
                             <outlet property="nameLabel" destination="Crp-gh-m7o" id="amP-IR-OYV"/>
+                            <outlet property="overlayView" destination="d8M-eg-CcH" id="CfE-U0-in9"/>
                             <outlet property="playButton" destination="bk4-GG-shl" id="thl-Cz-16t"/>
                             <outlet property="progressContainerView" destination="Ggd-x6-9Be" id="k2s-W3-qN6"/>
                             <outlet property="recordButton" destination="6C6-3J-7LD" id="rgg-Dz-WdU"/>
                             <outlet property="recordingInformationView" destination="b9g-5P-pKL" id="xCe-gA-4JC"/>
                             <outlet property="sampleRateLabel" destination="Iee-1w-GVQ" id="Hzo-u6-Rq9"/>
+                            <outlet property="secondaryOverlayView" destination="nhN-oW-IRN" id="FFl-YF-CvR"/>
                             <outlet property="stopButton" destination="CFg-4l-2Kt" id="qvT-cF-oDH"/>
                             <outlet property="voiceRecordingControlView" destination="FQ6-nw-s60" id="7kA-QW-HRO"/>
                         </connections>
